--- a/gb/20/3/21/n11960060.md
+++ b/gb/20/3/21/n11960060.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/piedfj363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/piedfj363/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/piedfj363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/piedfj363/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/piedfj363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>《依然相信》影评：对神的信仰 是走出逆境的关键</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/ecbb3c1bdba495c561c60042d43b1a27-600x400.jpg" />
 <h6>《依然相信》剧照。（车库娱乐提供）
 </h6>
 <hr>
-<p>【大纪元2020年03月21日讯】人生难免遭逢意想不到的重大变故，在面临重大打击时，对神的坚定信仰便可能成为帮助人走出困境或伤痛的关键，此类题材的作品在好莱坞中一向凤毛麟角，因此也让《<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E4%BE%9D%E7%84%B6%E7%9B%B8%E4%BF%A1.md#1">依然相信</a>》（I Still Believe）这部电影显得更为难能可贵。</p>
+<p>【大纪元2020年03月21日讯】人生难免遭逢意想不到的重大变故，在面临重大打击时，对神的坚定信仰便可能成为帮助人走出困境或伤痛的关键，此类题材的作品在好莱坞中一向凤毛麟角，因此也让《<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BE%9D%E7%84%B6%E7%9B%B8%E4%BF%A1.md#1">依然相信</a>》（I Still Believe）这部电影显得更为难能可贵。</p>
 <p>本片改编自美国歌手杰洛米?坎普（Jeremy Camp）的人生经历，片中的他是个刚要离家上大学的青年，并期盼未来能成为一流歌星。而进入大学校园的杰洛米，不仅如愿在音乐界得到机会，还在这里结识了后来成为自己妻子的女同学梅莉莎，然而两人相恋不久便传来梅莉莎不幸罹患癌症的噩耗，这也让两人的未来蒙上巨大阴影。</p>
-<figure id="attachment_11960067" aria-describedby="caption-attachment-11960067" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/be66ae5dcb1a7b0f4fc6c569399b5ec1.jpg"><img class=" wp-image-11960067" src="https://i.epochtimes.com/assets/uploads/2020/03/be66ae5dcb1a7b0f4fc6c569399b5ec1.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-11960067" class="wp-caption-text">《<ahref="https://github.com/piedfj363/djy/blob/master/gb/tag/%E4%BE%9D%E7%84%B6%E7%9B%B8%E4%BF%A1.md#1">依然相信</a>》剧照。 （车库娱乐提供）</figcaption></figure>
+<figure id="attachment_11960067" aria-describedby="caption-attachment-11960067" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/be66ae5dcb1a7b0f4fc6c569399b5ec1.jpg"><img class=" wp-image-11960067" src="https://i.epochtimes.com/assets/uploads/2020/03/be66ae5dcb1a7b0f4fc6c569399b5ec1.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-11960067" class="wp-caption-text">《<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BE%9D%E7%84%B6%E7%9B%B8%E4%BF%A1.md#1">依然相信</a>》剧照。 （车库娱乐提供）</figcaption></figure>
 <h2>男主角的机遇 充分体现“缘分”内涵</h2>
 <p>电影刚开始时，杰洛米就像一个普通的青年，有个美满的家庭，怀抱着梦想正式离家展开全新的生活。就对男主角的塑造来说，本片一开始就能让观众对他留下良好印象，能够迅速体认到杰洛米是弟弟眼中的好兄长、父母心中的好儿子。而真正使他的故事开始变得异于凡人的，当属他在大学中赢来的音乐与爱情双重机遇，且两者都很能体现“缘分”的内涵。</p>
 <p>就音乐的部分而言，让杰洛米有幸正式踏上歌星生涯的，Jean-Luc一角的相助可说是起到无法替代的作用。Jean-Luc在当时已是在校园中有一定名气的歌手，对杰洛米来说，堪称是音乐界的大学长。两人能够结识，除了有男主角勇于把握机会主动出击的因素，亦有Jean-Luc对杰洛米的赏识与提携。在Jean-Luc的穿针引线下，男主角逐渐地在音乐界崭露头角，得以显得顺理成章，不会显得太过离奇。</p>
@@ -36,41 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/2/29/n11905163.md#1">《极地守护犬》影评：拥有好主人 未必是狗的唯一归宿</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/7/n11921441.md#1">《大画特务》影评：欢乐爆笑 菁英特务挑战事业第二春</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/7/n11922973.md#1">《艾玛》影评：对婚姻的看法 可能随着缘分而改变</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/13/n11936756.md#1">《血卫》影评：用科技重生的背后 蕴藏玄机</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/14/n11940426.md#1">《钢铁勋章》影评：迟来的荣誉 同样令人动容</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/19/n13589576.md#1">《秘境探险》影评：寻宝题材再出成功之作</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/18/n13585713.md#1">《和平使者》影评：昔日的罪犯 今日成长为英雄</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/12/n13572352.md#1">《娶我吧！》影评：夸张的闪婚 也可能有美满结果</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/22/2/12/n13571074.md#1">《尼罗河谋杀案》影评：美妙婚姻暗藏重大杀机</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/29/n11905163.md#1">《极地守护犬》影评：拥有好主人 未必是狗的唯一归宿</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11921441.md#1">《大画特务》影评：欢乐爆笑 菁英特务挑战事业第二春</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11922973.md#1">《艾玛》影评：对婚姻的看法 可能随着缘分而改变</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/13/n11936756.md#1">《血卫》影评：用科技重生的背后 蕴藏玄机</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/14/n11940426.md#1">《钢铁勋章》影评：迟来的荣誉 同样令人动容</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13682146.md#1">《末日列车》第三季影评：新愿景也带来新纷争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/23/n13666117.md#1">《镀金年代》影评：新豪门被接纳 也须历经奋斗</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/19/n13658154.md#1">《坏蛋联盟》影评：改过向善永远不嫌晚！</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/19/n13657215.md#1">《搜救犬露比》影评：警察与狗携手成长 实现警犬梦</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
-<li><a href="https://github.com/piedfj363/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/piedfj363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/21/n11960060.htm">《依然相信》影评：对神的信仰 是走出逆境的关键</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/21/n11960060.htm">《依然相信》影评：对神的信仰 是走出逆境的关键</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/piedfj363/djy/blob/master/gb/20/3/21/n11960060.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/piedfj363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/piedfj363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/piedfj363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piedfj363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/20/3/21/n11960060.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
